--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,11 @@
     <!-- Images stored here -->
     <section id="photos"></section>
 
+    <!-- Credits -->
+    <div class="credits">
+      <p>Developed by: Chaitanya Baranwal</p>
+    </div>
+
   </body>
 
 </html>
